--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,22 @@
 }
 
 body {
-    height: 100vh;
     box-sizing: border-box;
     background-color: #F3F5FC;
     color: #0A3871;
 }
 
+.cabecalho {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    font-family: "Inter", sans-serif;
+    color: #0A3871;
+    padding: 2% 0% 0% 8%;
+}
+
 .apresentacao {
-    margin: 8%;
+    margin: 8% 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,6 +32,14 @@ body {
     display: flex;
     flex-direction: column;
     gap: 32px;
+}
+
+.apresentacao__conteudo-direito__texto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
 }
 
 .apresentacao__conteudo-direito__texto__titulo {
@@ -69,5 +85,27 @@ body {
     border-radius: 24px;
     font-size: 16px;
     font-family: "Inter", sans-serif;
+    text-decoration: none;
     color: #0A3871;
+}
+
+.apresentacao__conteudo-esquerdo__botoes__botao:hover {
+    background-color: #0A3871;
+    width: 328px;
+    height: 67px;
+    border-radius: 24px;
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.rodape {
+    padding: 28px;
+    color: #FFFFFF;
+    background-color: #0A3871;
+    text-align: center;
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 400px;
 }
