--- a/styles/style.css
+++ b/styles/style.css
@@ -1,103 +1,176 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     box-sizing: border-box;
     background-color: #F3F5FC;
+    background-size: 100%;
     color: #0A3871;
 }
 
 .cabecalho {
     display: flex;
     align-items: center;
-    gap: 50px;
     font-family: "Inter", sans-serif;
+    font-size: 30px;
+    font-weight: 700;
     color: #0A3871;
-    padding: 2% 0% 0% 8%;
+    padding: 2% 0 0 3%;
+    gap: 50px;
 }
 
-.apresentacao {
-    margin: 8% 10%;
+.container {
+    margin: 2%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 40px;
 }
 
-.apresentacao__conteudo-direito {
-    width: 400px;
+.container__input {
+    width: 770px;
     display: flex;
     flex-direction: column;
+    align-items: first baseline;
+    padding: 0% 0% 0% 12%;
     gap: 32px;
 }
 
-.apresentacao__conteudo-direito__texto {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 16px;
-}
-
-.apresentacao__conteudo-direito__texto__titulo {
-    font-size: 24px;
-    font-family: "Inter", sans-serif;
-    font-weight: 700;
-    color: #343A40;
-}
-
-.apresentacao__conteudo-direito__texto__paragrafo {
-    font-size: 16px;
-    font-family: "Inter", sans-serif;
-    color: #495057;
-}
-
-.apresentacao__conteudo-esquerdo {
-    width: 680px;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-}
-
-.apresentacao__conteudo-esquerdo__warning {
-    display: flex;
-    gap: 13px;
-}
-
-.apresentacao__conteudo-esquerdo__texto {
-    font-size: 12px;
-    font-family: "Inter", sans-serif;
-    color: #495057;
-}
-
-.apresentacao__conteudo-esquerdo__botoes {
-    display: flex;
-    gap: 2em;
-}
-
-.apresentacao__conteudo-esquerdo__botoes__botao {
-    background-color: #D8DFE8;
-    width: 328px;
-    height: 67px;
-    border-radius: 24px;
-    font-size: 16px;
-    font-family: "Inter", sans-serif;
-    text-decoration: none;
+.container__input__dados__texto {
+    background: none;
     color: #0A3871;
+    border: 4px solid #F6F0F0;
+    width: 650px; /* Unidade 'px' adicionada */
+    height: 500px;
+    font-size: 22px;
+    font-weight: 200;
+    border-radius: 30px;
+    padding: 30px;
+    font-family: "Inter", sans-serif;
+    resize: none;
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
 }
 
-.apresentacao__conteudo-esquerdo__botoes__botao:hover {
-    background-color: #0A3871;
-    width: 328px;
-    height: 67px;
-    border-radius: 24px;
-    font-size: 16px;
+.container__input__observacao {
+    display: flex;
+    padding: 15px 0;
+}
+
+.container__input__observacao__texto {
     font-family: "Inter", sans-serif;
-    text-decoration: none;
-    color: #FFFFFF;
+    color: #343A40;
+    padding-left: 5px;
+}
+
+.container__input__botao {
+    padding: 1% 0 3% 0;
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+.container__input__botao__criptografar {
+    box-shadow: none;
+    width: 300px;
+    border-radius: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 24px;
+    background-color: #0A3871;
+    color: #F6F0F0;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+    transition: 400ms;
+}
+
+.container__input__botao__criptografar:hover {
+    box-shadow: 0px 0px 10px 10px #F6F0F0;
+    font-size: 20px;
+}
+
+.container__input__botao__descriptografar {
+    width: 300px;
+    border-radius: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 24px;
+    background-color: #D8DFE8;
+    color: #0A3871;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+    transition: 400ms;
+}
+
+.container__input__botao__descriptografar:hover {
+    box-shadow: 0px 0px 10px 10px #F6F0F0;
+    font-size: 20px;
+}
+
+.container__output__conteudo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF; 
+    width: 300px;
+    height: 600px;
+    border-radius: 30px;
+    padding: 30px;
+}
+
+.container__output__conteudo__subtitulo {
+    font-family: "Inter", sans-serif;
+    color: #232427;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.container__output__conteudo__paragrafo {
+    font-family: "Inter", sans-serif;
+    color: #232427;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.container__output__dados {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F6F0F0; 
+    width: 300px;
+    height: 700px;
+    border-radius: 30px;
+    padding: 30px;
+}
+
+.container__output__dados__texto {
+    background: none;
+    border: none;
+    width: 300px;
+    height: 600px;
+    font-size: 20px;
+    font-weight: 200;
+    font-family: "Inter", sans-serif;
+    resize: none;
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+}
+
+.conteudo__output__dados__botao {
+    box-shadow: none;
+    width: 300px;
+    border-radius: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 24px;
+    background-color: #0A3871;
+    color: #F6F0F0;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+    transition: 400ms;
 }
 
 .rodape {
@@ -107,5 +180,5 @@ body {
     text-align: center;
     font-family: "Inter", sans-serif;
     font-size: 24px;
-    font-weight: 400px;
+    font-weight: 400; /* Correção da propriedade */
 }
