--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ body {
     color: #0A3871;
     border: 4px solid #F6F0F0;
     width: 650px; /* Unidade 'px' adicionada */
-    height: 500px;
+    height: 300px;
     font-size: 22px;
     font-weight: 200;
     border-radius: 30px;
@@ -114,7 +114,7 @@ body {
     align-items: center;
     background-color: #FFFFFF; 
     width: 300px;
-    height: 600px;
+    height: 500px;
     border-radius: 30px;
     padding: 30px;
 }
@@ -174,11 +174,14 @@ body {
 }
 
 .rodape {
-    padding: 28px;
+    display: flex;
+    justify-content: center;
+    padding: 19px;
     color: #FFFFFF;
     background-color: #0A3871;
     text-align: center;
     font-family: "Inter", sans-serif;
     font-size: 24px;
     font-weight: 400; /* Correção da propriedade */
+    gap: 40px;
 }
