--- a/styles/style.css
+++ b/styles/style.css
@@ -3,34 +3,34 @@
 body {
     box-sizing: border-box;
     background-color: #F3F5FC;
-    background-size: 100%;
     color: #0A3871;
 }
 
 .cabecalho {
     display: flex;
     align-items: center;
+    padding: 2% 0 0 3%;
+}
+
+.cabecalho__texto {
     font-family: "Inter", sans-serif;
     font-size: 30px;
-    font-weight: 700;
+    font-weight: 600;
     color: #0A3871;
-    padding: 2% 0 0 3%;
-    gap: 50px;
 }
 
 .container {
-    margin: 2%;
+    padding: 3%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 40px;
+    gap: 30px;
 }
 
 .container__input {
-    width: 770px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    align-items: first baseline;
     padding: 0% 0% 0% 12%;
     gap: 32px;
 }
@@ -43,8 +43,6 @@ body {
     height: 300px;
     font-size: 22px;
     font-weight: 200;
-    border-radius: 30px;
-    padding: 30px;
     font-family: "Inter", sans-serif;
     resize: none;
     box-shadow: 0 0 0 0;
@@ -54,7 +52,7 @@ body {
 
 .container__input__observacao {
     display: flex;
-    padding: 15px 0;
+    padding: 9px 0;
 }
 
 .container__input__observacao__texto {
@@ -64,10 +62,9 @@ body {
 }
 
 .container__input__botao {
-    padding: 1% 0 3% 0;
     display: flex;
-    justify-content: center;
-    gap: 60px;
+    justify-content:left;
+    gap: 20px;
 }
 
 .container__input__botao__criptografar {
@@ -81,11 +78,10 @@ body {
     color: #F6F0F0;
     font-family: "Inter", sans-serif;
     text-align: center;
-    transition: 400ms;
 }
 
 .container__input__botao__criptografar:hover {
-    box-shadow: 0px 0px 10px 10px #F6F0F0;
+    box-shadow: 0px 0px 10px 10px #FFFFFF;
     font-size: 20px;
 }
 
@@ -99,11 +95,10 @@ body {
     color: #0A3871;
     font-family: "Inter", sans-serif;
     text-align: center;
-    transition: 400ms;
 }
 
 .container__input__botao__descriptografar:hover {
-    box-shadow: 0px 0px 10px 10px #F6F0F0;
+    box-shadow: 0px 0px 10px 10px #FFFFFF;
     font-size: 20px;
 }
 
@@ -176,7 +171,7 @@ body {
 .rodape {
     display: flex;
     justify-content: center;
-    padding: 19px;
+    padding: 22px;
     color: #FFFFFF;
     background-color: #0A3871;
     text-align: center;
