--- a/styles/style.css
+++ b/styles/style.css
@@ -112,19 +112,27 @@ body {
     height: 500px;
     border-radius: 30px;
     padding: 30px;
+    gap: 32px;
+}
+
+.container__output__conteudo__texto {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .container__output__conteudo__subtitulo {
     font-family: "Inter", sans-serif;
     color: #232427;
-    font-size: 1rem;
+    font-size: 24px;
+    font-weight: bold;
     text-align: center;
 }
 
 .container__output__conteudo__paragrafo {
     font-family: "Inter", sans-serif;
     color: #232427;
-    font-size: 1rem;
+    font-size: 16px;
     text-align: center;
 }
 
@@ -136,7 +144,7 @@ body {
     background-color: #F6F0F0; 
     width: 300px;
     height: 700px;
-    border-radius: 30px;
+    border-radius: 32px;
     padding: 30px;
 }
 
@@ -157,7 +165,7 @@ body {
 .conteudo__output__dados__botao {
     box-shadow: none;
     width: 300px;
-    border-radius: 30px;
+    border-radius: 32px;
     font-size: 18px;
     font-weight: 600;
     padding: 24px;
@@ -172,11 +180,22 @@ body {
     display: flex;
     justify-content: center;
     padding: 22px;
-    color: #FFFFFF;
     background-color: #0A3871;
     text-align: center;
+    gap: 40px;
+}
+
+.rodape__texto {
+    color: #FFFFFF;
     font-family: "Inter", sans-serif;
     font-size: 24px;
-    font-weight: 400; /* Correção da propriedade */
-    gap: 40px;
+    font-weight: 400;
+}
+
+.rodape__link {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
