--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,14 @@ body {
 
 .cabecalho {
     display: flex;
+    justify-content: left;
     align-items: center;
-    padding: 2% 0 0 3%;
+    padding: 2% 2% 0% 5%;
 }
 
 .cabecalho__texto {
     font-family: "Inter", sans-serif;
-    font-size: 30px;
+    font-size: 32px;
     font-weight: 600;
     color: #0A3871;
 }
@@ -33,6 +34,12 @@ body {
     flex-direction: column;
     padding: 0% 0% 0% 12%;
     gap: 32px;
+}
+
+textarea::placeholder {
+    font-size: 32px;
+    font-family: "Inter", sans-serif;
+    color:#0A3871;
 }
 
 .container__input__dados__texto {
