--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ textarea::placeholder {
     border: 4px solid #F6F0F0;
     width: 650px; /* Unidade 'px' adicionada */
     height: 300px;
-    font-size: 22px;
+    font-size: 32px;
     font-weight: 200;
     font-family: "Inter", sans-serif;
     resize: none;
@@ -117,7 +117,7 @@ textarea::placeholder {
     background-color: #FFFFFF; 
     width: 300px;
     height: 500px;
-    border-radius: 30px;
+    border-radius: 32px;
     padding: 30px;
     gap: 32px;
 }
@@ -148,7 +148,7 @@ textarea::placeholder {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #F6F0F0; 
+    background-color: #FFFFFF; 
     width: 300px;
     height: 700px;
     border-radius: 32px;
