--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
 
 .cabecalho__texto {
     font-family: "Inter", sans-serif;
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 600;
     color: #0A3871;
 }
@@ -37,7 +37,7 @@ body {
 }
 
 textarea::placeholder {
-    font-size: 32px;
+    font-size: 2rem;
     font-family: "Inter", sans-serif;
     color:#0A3871;
 }
@@ -48,7 +48,7 @@ textarea::placeholder {
     border: 4px solid #F6F0F0;
     width: 650px; /* Unidade 'px' adicionada */
     height: 300px;
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 200;
     font-family: "Inter", sans-serif;
     resize: none;
@@ -78,7 +78,7 @@ textarea::placeholder {
     box-shadow: none;
     width: 300px;
     border-radius: 30px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 300;
     padding: 24px;
     background-color: #0A3871;
@@ -89,13 +89,13 @@ textarea::placeholder {
 
 .container__input__botao__criptografar:hover {
     box-shadow: 0px 0px 10px 10px #FFFFFF;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .container__input__botao__descriptografar {
     width: 300px;
     border-radius: 30px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 300;
     padding: 24px;
     background-color: #D8DFE8;
@@ -106,7 +106,7 @@ textarea::placeholder {
 
 .container__input__botao__descriptografar:hover {
     box-shadow: 0px 0px 10px 10px #FFFFFF;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .container__output__conteudo {
@@ -131,7 +131,7 @@ textarea::placeholder {
 .container__output__conteudo__subtitulo {
     font-family: "Inter", sans-serif;
     color: #343A40;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
 }
@@ -139,7 +139,7 @@ textarea::placeholder {
 .container__output__conteudo__paragrafo {
     font-family: "Inter", sans-serif;
     color: #495057;
-    font-size: 16px;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -160,7 +160,7 @@ textarea::placeholder {
     border: none;
     width: 300px;
     height: 600px;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 200;
     font-family: "Inter", sans-serif;
     resize: none;
@@ -173,7 +173,7 @@ textarea::placeholder {
     box-shadow: none;
     width: 300px;
     border-radius: 32px;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 600;
     padding: 24px;
     background-color: #0A3871;
@@ -195,7 +195,7 @@ textarea::placeholder {
 .rodape__texto {
     color: #FFFFFF;
     font-family: "Inter", sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
@@ -203,6 +203,6 @@ textarea::placeholder {
     text-decoration: none;
     color: #FFFFFF;
     font-family: "Inter", sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
