--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+:root {
+    --White: #FFFFFF;
+    --dark-blue-300: #0A3871;
+    --light-blue-100: #F3F5FC;
+    --gray-100: #CED4DA;
+    --gray-400: #495057;
+    --gray-500: #343A40;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,59 +16,57 @@
 
 body {
     box-sizing: border-box;
-    background-color: #F3F5FC;
-    color: #0A3871;
+    background-color: var(--light-blue-100);
+    color: var(--dark-blue-300);
 }
 
 .cabecalho {
     display: flex;
-    justify-content: left;
     align-items: center;
-    padding: 2% 2% 0% 5%;
+    padding: 1% 0% 0% 5%;
+    gap: 8%;
 }
 
 .cabecalho__texto {
     font-family: "Inter", sans-serif;
     font-size: 2rem;
     font-weight: 600;
-    color: #0A3871;
+    text-align: center;
+    color: var(--dark-blue-300);
 }
 
 .container {
-    padding: 3%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 30px;
+    gap: 82px;
 }
 
 .container__input {
     width: 50%;
     display: flex;
     flex-direction: column;
-    padding: 0% 0% 0% 12%;
     gap: 16px;
 }
 
 textarea::placeholder {
     font-size: 2rem;
     font-family: "Inter", sans-serif;
-    color:#0A3871;
+    color: var(--dark-blue-300);
 }
 
 .container__input__dados__texto {
-    background: none;
-    color: #0A3871;
-    border: 4px solid #F6F0F0;
-    width: 650px; /* Unidade 'px' adicionada */
-    height: 300px;
+    background-color: transparent;
+    color: var(--dark-blue-300);
+    width: 100%;
+    height: 400px;
     font-size: 2rem;
-    font-weight: 200;
+    font-weight: 300;
     font-family: "Inter", sans-serif;
     resize: none;
-    box-shadow: 0 0 0 0;
-    border: 0 none;
-    outline: 0;
+    border: none;
+    outline: none;
 }
 
 .container__input__observacao {
@@ -69,59 +76,63 @@ textarea::placeholder {
 
 .container__input__observacao__texto {
     font-family: "Inter", sans-serif;
-    color: #495057;
+    color: var(--gray-400);
     padding-left: 5px;
 }
 
 .container__input__botao {
     display: flex;
-    justify-content:left;
-    gap: 20px;
+    gap: 24px;
 }
 
 .container__input__botao__criptografar {
     box-shadow: none;
-    width: 300px;
-    border-radius: 30px;
+    width: 50%;
+    border-radius: 24px;
     font-size: 1rem;
     font-weight: 300;
     padding: 24px;
-    background-color: #0A3871;
-    color: #FFFFFF;
+    background-color: var(--dark-blue-300);
+    color: var(--White);
     font-family: "Inter", sans-serif;
     text-align: center;
 }
 
 .container__input__botao__criptografar:hover {
-    box-shadow: 0px 0px 10px 10px #FFFFFF;
+    box-shadow: 0px 0px 10px 10px var(--White);
     font-size: 1.25rem;
 }
 
 .container__input__botao__descriptografar {
-    width: 300px;
-    border-radius: 30px;
+    box-shadow: none;
+    width: 50%;
+    border-radius: 24px;
     font-size: 1rem;
     font-weight: 300;
     padding: 24px;
-    background-color: #D8DFE8;
-    color: #0A3871;
+    background-color: var(--gray-100);
+    color: var(--dark-blue-300);
     font-family: "Inter", sans-serif;
     text-align: center;
 }
 
 .container__input__botao__descriptografar:hover {
-    box-shadow: 0px 0px 10px 10px #FFFFFF;
+    box-shadow: 0px 0px 10px 10px var(--White);
     font-size: 1.25rem;
+}
+
+.container__output {
+    width: 30%;
 }
 
 .container__output__conteudo {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF; 
+    align-items:center;
+    background-color: var(--White); 
     width: 300px;
-    height: 500px;
+    height: 700px;
     border-radius: 32px;
     padding: 30px;
     gap: 32px;
@@ -135,7 +146,7 @@ textarea::placeholder {
 
 .container__output__conteudo__subtitulo {
     font-family: "Inter", sans-serif;
-    color: #343A40;
+    color: var(--gray-500);
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
@@ -143,7 +154,7 @@ textarea::placeholder {
 
 .container__output__conteudo__paragrafo {
     font-family: "Inter", sans-serif;
-    color: #495057;
+    color: var(--gray-400);
     font-size: 1rem;
     text-align: center;
 }
@@ -153,7 +164,7 @@ textarea::placeholder {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #FFFFFF; 
+    background-color: var(--White); 
     width: 300px;
     height: 700px;
     border-radius: 32px;
@@ -164,9 +175,9 @@ textarea::placeholder {
     background: none;
     border: none;
     width: 300px;
-    height: 600px;
+    height: 700px;
     font-size: 1.25rem;
-    font-weight: 200;
+    font-weight: 300;
     font-family: "Inter", sans-serif;
     resize: none;
     box-shadow: 0 0 0 0;
@@ -174,51 +185,46 @@ textarea::placeholder {
     outline: 0;
 }
 
-.conteudo__output__dados__botao {
+.container__output__dados__botao {
     box-shadow: none;
     width: 300px;
     border-radius: 32px;
     font-size: 1rem;
     font-weight: 600;
     padding: 24px;
-    background-color: #0A3871;
-    color: #F6F0F0;
+    background-color: var(--White);
+    color: var(--dark-blue-300);
     font-family: "Inter", sans-serif;
     text-align: center;
     transition: 400ms;
 }
 
+.container__output__dados__botao:hover {
+    box-shadow: 0px 0px 10px 10px var(--White);
+    font-size: 1.25rem;
+}
+
 .rodape {
     display: flex;
     justify-content: center;
-    padding: 22px;
+    padding: 24px;
     background-color: #0A3871;
     text-align: center;
-    gap: 40px;
-}
-
-.rodape__texto {
-    color: #FFFFFF;
     font-family: "Inter", sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
+    color: var(--White);
+    gap: 20px;
 }
 
 .rodape__link {
+    color: var(--White);
     text-decoration: none;
-    color: #FFFFFF;
-    font-family: "Inter", sans-serif;
-    font-size: 1.5rem;
-    font-weight: 400;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
     .cabecalho {
-        padding: 10%;
-    }
-
-    .cabecalho__texto {
-        justify-content: center;
+        padding: 5%;
     }
 
     .container {
@@ -227,6 +233,10 @@ textarea::placeholder {
     }
 
     .container__input {
-        width: auto;
+        width: 100%;
+    }
+
+    .container__output {
+        width: 100%;
     }
 }
