--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,11 @@ textarea::placeholder {
 
 .container__input__observacao {
     display: flex;
-    padding: 9px 0;
+    align-items: center;
+}
+
+.container__input__observacao__imagem {
+    width:3%
 }
 
 .container__input__observacao__texto {
@@ -132,7 +136,7 @@ textarea::placeholder {
     align-items:center;
     background-color: var(--White); 
     width: 300px;
-    height: 700px;
+    height: 530px;
     border-radius: 32px;
     padding: 30px;
     gap: 32px;
@@ -166,9 +170,9 @@ textarea::placeholder {
     align-items: center;
     background-color: var(--White); 
     width: 300px;
-    height: 700px;
+    height: 530px;
     border-radius: 32px;
-    padding: 5% 5% 45% 5%;
+    padding: 5%;
 }
 
 .container__output__dados__texto {
@@ -176,7 +180,7 @@ textarea::placeholder {
     border: none;
     color: var(--dark-blue-300);
     width: 300px;
-    height: 700px;
+    height: 530px;
     font-size: 2rem;
     font-weight: 300;
     font-family: "Inter", sans-serif;
