--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,13 @@
     --gray-100: #CED4DA;
     --gray-400: #495057;
     --gray-500: #343A40;
+
+    --font-primaria: "Inter", sans-serif;
+
+    --tamanho-fonte-primaria: 2rem;
+    --tamanho-fonte-secundaria: 1.5rem;
+    --tamanho-fonte-terciaria: 1.25rem;
+    --tamanho-fonte-quartenario: 1rem;
 }
 
 *{
@@ -28,8 +35,8 @@ body {
 }
 
 .cabecalho__texto {
-    font-family: "Inter", sans-serif;
-    font-size: 2rem;
+    font-family: var(--font-primaria);
+    font-size: var(--tamanho-fonte-primaria);
     font-weight: 600;
     text-align: center;
     color: var(--dark-blue-300);
@@ -51,8 +58,8 @@ body {
 }
 
 textarea::placeholder {
-    font-size: 2rem;
-    font-family: "Inter", sans-serif;
+    font-size: var(--tamanho-fonte-primaria);
+    font-family: var(--font-primaria);
     color: var(--dark-blue-300);
 }
 
@@ -61,9 +68,9 @@ textarea::placeholder {
     color: var(--dark-blue-300);
     width: 100%;
     height: 400px;
-    font-size: 2rem;
+    font-size: var(--tamanho-fonte-primaria);
     font-weight: 300;
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     resize: none;
     border: none;
     outline: none;
@@ -79,7 +86,7 @@ textarea::placeholder {
 }
 
 .container__input__observacao__texto {
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     color: var(--gray-400);
     padding-left: 5px;
 }
@@ -94,19 +101,19 @@ textarea::placeholder {
     width: 328px;
     border: 1px solid var(--dark-blue-300);
     border-radius: 24px;
-    font-size: 1rem;
+    font-size: var(--tamanho-fonte-quartenario);
     font-weight: 300;
     padding: 24px;
     background-color: var(--dark-blue-300);
     color: var(--White);
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     text-align: center;
     cursor: pointer;
 }
 
 .container__input__botao__criptografar:hover {
     box-shadow: 0px 0px 10px 10px var(--White);
-    font-size: 1.25rem;
+    font-size: var(--tamanho-fonte-terciaria);
 }
 
 .container__input__botao__descriptografar {
@@ -114,19 +121,19 @@ textarea::placeholder {
     width: 328px;
     border-radius: 24px;
     border: 1px solid var(--dark-blue-300);
-    font-size: 1rem;
+    font-size: var(--tamanho-fonte-quartenario);
     font-weight: 300;
     padding: 24px;
     background-color: var(--gray-100);
     color: var(--dark-blue-300);
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     text-align: center;
     cursor: pointer;
 }
 
 .container__input__botao__descriptografar:hover {
     box-shadow: 0px 0px 10px 10px var(--White);
-    font-size: 1.25rem;
+    font-size: var(--tamanho-fonte-terciaria);
 }
 
 .container__output {
@@ -153,17 +160,17 @@ textarea::placeholder {
 }
 
 .container__output__conteudo__subtitulo {
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     color: var(--gray-500);
-    font-size: 1.5rem;
+    font-size: var(--tamanho-fonte-secundaria);
     font-weight: bold;
     text-align: center;
 }
 
 .container__output__conteudo__paragrafo {
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     color: var(--gray-400);
-    font-size: 1rem;
+    font-size: var(--tamanho-fonte-quartenario);
     text-align: center;
 }
 
@@ -185,9 +192,9 @@ textarea::placeholder {
     color: var(--dark-blue-300);
     width: 300px;
     height: 530px;
-    font-size: 2rem;
+    font-size: var(--tamanho-fonte-primaria);
     font-weight: 300;
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     resize: none;
     box-shadow: 0 0 0 0;
     border: 0 none;
@@ -199,55 +206,31 @@ textarea::placeholder {
     width: 328px;
     border-radius: 24px;
     border: 1px solid var(--dark-blue-300);
-    font-size: 1rem;
+    font-size: var(--tamanho-fonte-quartenario);
     font-weight: 600;
     padding: 24px;
     background-color: var(--White);
     color: var(--dark-blue-300);
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-primaria);
     text-align: center;
     cursor: pointer;;
 }
 
 .container__output__dados__botao:hover {
     box-shadow: 0px 0px 10px 10px var(--White);
-    font-size: 1.25rem;
+    font-size: var(--tamanho-fonte-terciaria);
 }
 
 .rodape {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px;
+    padding: 8px 0px;
     background-color: var(--dark-blue-300);
     text-align: center;
-    font-family: "Inter", sans-serif;
-    font-size: 1.5rem;
+    font-family: var(--font-primaria);
+    font-size: var(--tamanho-fonte-secundaria);
     font-weight: 400;
     color: var(--White);
     gap: 20px;
-}
-
-.rodape__link {
-    color: var(--White);
-    text-decoration: none;
-}
-
-@media (max-width: 1200px) {
-    .cabecalho {
-        padding: 5%;
-    }
-
-    .container {
-        flex-direction: column;
-        padding: 5%;
-    }
-
-    .container__input {
-        width: 100%;
-    }
-
-    .container__output {
-        width: 100%;
-    }
 }
