--- a/styles/style.css
+++ b/styles/style.css
@@ -189,10 +189,10 @@ textarea::placeholder {
 .container__output__dados__texto {
     background: none;
     border: none;
-    color: var(--dark-blue-300);
+    color: var(--gray-400);
     width: 300px;
     height: 530px;
-    font-size: var(--tamanho-fonte-primaria);
+    font-size: var(--tamanho-fonte-secundaria);
     font-weight: 300;
     font-family: var(--font-primaria);
     resize: none;
@@ -229,7 +229,7 @@ textarea::placeholder {
     background-color: var(--dark-blue-300);
     text-align: center;
     font-family: var(--font-primaria);
-    font-size: var(--tamanho-fonte-secundaria);
+    font-size: var(--tamanho-fonte-terciaria);
     font-weight: 400;
     color: var(--White);
     gap: 20px;
@@ -244,6 +244,10 @@ textarea::placeholder {
 
     .container__input__dados__texto, .container__output__dados__texto {
         height: 300px;
+    }
+
+    .container__output__dados {
+        width: 100%;
     }
 }
 
@@ -315,6 +319,6 @@ textarea::placeholder {
 
     .container__output__dados {
         width: auto;
-        max-height: 300px;
+        max-height: 200px;
     }
 }
